# EXOZIPPy

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  VBMicrolensing.md  code_review.txt  conftest.py  exozippy.py  hpc_optimization.txt  parameter.py  pyproject.toml  setup.py  todo.txt  vbm_fix.txt
.github/workflows/: tests.yml
DC18Test/: evaluate_results.py  example_05_RomanDC18.py  plot_lcs4talk.py  plot_results.py
Notebooks/: Test.ipynb  tic.priors
data/mulens/: spitzer_ephemerides_2014_to_2019.txt
documents/: 00README.txt  Brainstorm.md  StoringMulensFitResults.md  style_guidelines.md
documents/SpaceParallaxRefactor/: 00README.txt  260409_1321_UseCaseBehavior.md  260409_Specifications_v1.md  260420_1511_ImplementationPrompts.md  260422_1700_Prompt1_High-Level_Fit Workflow Pseudocode.md
examples/: DC18_classes.py  data_for_test_examples.py  example_01_FSPL.py  example_02_PL_parallax.py  example_03_planet.py  example_04_YAML_input.py  example_05_RomanDC18.py  example_06_EventFinder.py  example_07_sfit.py  example_08_AnomalyFinder.py  example_09_refinePSPL.py  example_10_get2L1S_params.py  example_11_galactic_prior.py  example_12_fit_types.py  input_for_example_04.yaml  print_ex_metrics.py
examples/DC2018_128/: DC2018_128.params.2.yaml  DC2018_128.params.yaml  DC2018_128.yaml  DC2018_128_hpc.yaml  README.md  compare_results.py  dc128.job  diag_start.py  mmexofast.json
examples/GaiaBH1/: GaiaBH1.GaiaDR4sim.astrom  GaiaBH1.RV.rv  README.md  gaiabh1.params.yaml  gaiabh1.yaml  gost_bh1_transits.csv  simulate_gaia_astrometry.py
examples/HIP1349/: HIP1349.Hipparcos.astrom  HIP1349.iad.txt  README.md  get_hipparcos_iad.py  hip1349.params.yaml  hip1349.yaml
examples/KMT-2019-BLG-1806/: KMT-2019-BLG-1806-r_exozippy_init.json  KMT-2019-BLG-1806.params.yaml  KMT-2019-BLG-1806.sed.yaml  KMT-2019-BLG-1806.yaml  README.md  n20260624.I.KMTA04.pys  n20260624.I.KMTC04.pys  n20260624.I.KMTS04.pys
examples/KMT-2021-BLG-1122L/: README.md
examples/astrometry_sim/: README.md  SimBinary.Ground.abs.astrom  SimBinary.Ground.rel.astrom  simbinary.params.yaml  simbinary.yaml  simulate_astrometry.py
examples/galactic_model/: gm.params.yaml  gm.yaml
examples/hat-3-p-staronly/: HAT-3-P.params.yaml  HAT-3-P.sed.yaml  HAT-3-P.yaml
examples/hat3/: hat3.params.2.yaml  hat3.params.yaml  hat3_staronly.yaml
examples/hd80606/: hd80606.yaml
examples/kelt4/: kelt4.sed.yaml  kelt4.yaml  kelt4_rv+transit+sed.params.yaml  kelt4_rv+transit+sed.yaml  kelt4_rvonly.yaml  kelt4_sed.params.yaml
examples/kelt4rvonly/: kelt4.params.2.yaml  kelt4.params.yaml  kelt4.yaml
examples/mulensing_pspl/: pspl.params.yaml  pspl.yaml
examples/ob08092/: README.md  ob08092.params.yaml  ob08092.yaml
examples/ob140939/: README.md  ob140939.params.yaml  ob140939.yaml
examples/ob161003/: README.md  convert_data.py  dbf1.txt  ob161003.params.yaml  ob161003.yaml
examples/ob161045/: README.md
examples/use_cases/: DC18_classes.py  data_for_test_examples.py  example_02_PL_parallax.py  example_05_RomanDC18.py  example_06_EventFinder.py  example_07_sfit.py  example_09_refinePSPL.py  example_10_get2L1S_params.py  example_13_KMT.py  example_14_2L1Sbump_models.py  example_15_wide_grid.py  print_ex_metrics.py  use_case_01_ob0939.py  use_case_01_pymc.py  use_case_02_ob0939.py  use_case_02b_ob0939.py  use_case_02c_ob0939.py  use_case_03_ob1045.py  use_case_04_ob08092.py
examples_new/hd80606/: HD80606.HIRES.SIMULATED.rv  hd80606.params.yaml  hd80606.yaml
examples_new/kelt4rvonly/: kelt4.params.yaml  kelt4.yaml
examples_new/mulensing_pspl/: pspl.params.yaml  pspl.yaml
exozippy/: __init__.py  build_latex_table.py  build_model.py  build_model2.py  build_ulens_model.py  event.py  exozippy.py  exozippy_getmcmcscale.py  exozippy_keplereq.py  exozippy_rossiter.py  exozippy_rv.py  exozippy_tran.py  functions.py  initialize_nuts.py  massradius_mann.py  massradius_mist.py  mkconstants.py  mkss.py  mmexofast.py  model.py  parameter.py  planet.py  read_parfile.py  readrv.py  readtran.py  star.py  summarize_model.py  trace_to_event.py  transit.py  ulens.py  utils.py  write_parfile.py
exozippy/mist/: utils.py
exozippy/mmexofast/: __init__.py  classifier.py  com_trans.py  estimate_params.py  fit_types.py  fitters.py  gridsearches.py  mmexofast.bak  mmexofast.py  model_types.py  observatories.py  output.py  results.py  ulens.py  workflow_step.py
exozippy/sed/: mkticsed.py  utils.py
exozippy/unit_tests/: test_mistmultised.py  test_rv.py  test_tran.py  test_ulens.py
gui/frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
runs/kelt4_rv_only_20260202-081922/: params.yaml
runs/kelt4_rv_only_20260202-084659/: fit.yaml
runs/kelt4_rv_only_20260202-211427/: idata.nc
runs/kelt4_rv_only_20260305-122518/: idata.nc  summary.txt
runs/kelt4_rv_only_20260305-132532/: fit.yaml
runs/kelt4_rv_only_20260305-145829/: fit.yaml  idata.nc  summary.txt
runs/kelt4_rv_only_20260305-160204/: fit.yaml
runs/kelt4_rv_only_20260305-162512/: idata.nc  (+1 more)
scripts/: dump_code.py  getdata.py  make_bc_tables.py  make_test_fixtures.py  mkprior.py  mkticsed.py  mmexofast_to_params.py  repro_vbm_timeout.py  validate_vbm_safedist.py
tests/: README  conftest.py  tc2tp.txt  test_astrometry.py  test_bad_user_input.py  test_band.py  test_config_healing.py  test_convergence.py  test_evaluator.py  test_factory.py  test_fix.py  test_galactic_model.py  test_graph.py  test_gui_app.py  test_gui_data.py  test_gui_document.py  test_gui_tune.py  test_hierarchical_orbit.py  test_initial_solver.py  test_integration_kelt4.py  test_introspect.py  test_linked_params.py  test_log_s.py  test_make_bc.py  test_mann.py  test_microlensing_physics.py  test_mkparam.py  test_mkprior_multiseed.py  test_mode_evidence.py  test_mode_report.py  test_mode_report_cli.py  test_mulens_review_fixes.py  test_multimode_outputs.py  test_multiseed_config.py  test_multiseed_mmexofast.py  test_multiseed_ptde.py  test_multiseed_system.py  test_nsnl.py  test_omega.py  test_overrides.py  (+28 more)
(+472 files in other folders)
