[tool.poetry]
name = "exozippy"
version = "0.1.0"
description = "general modeling code"
authors = ["jason.eastman@cfa.harvard.edu"]
readme = "README.md"
packages = [{include = "exozippy", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pytensor = "<2.35.0"
pandas = ">=1.3.6,<3.0.0"
arviz = "<0.20.0"
numpy = ">=2.0"
pymc = ">=5.10.0"
pyyaml = ">=6.0.3,<7.0.0"
matplotlib = ">=3.10.9,<4.0.0"
astropy = ">=7.2.0,<8.0.0"
celerite = ">=0.4.3,<0.5.0"
corner = ">=2.2.3,<3.0.0"
mulensmodel = ">=3.9.0,<4.0.0"
jplephem = ">=2.24,<3.0"
lightkurve = ">=2.6.0,<3.0.0"
exoplanet-core = { version = ">=0.3.1", extras = ["pymc"] }
click = ">=8.3.3,<9.0.0"
h5py = ">=3.16.0,<4.0.0"
numba = ">=0.65.1,<0.66.0"
astroquery = ">=0.4.7"
gaiadr3-zeropoint = { version = ">=1.0", optional = true }

# OS specific dependencies
mkl = { version = "^2023.0", markers = "sys_platform == 'win32'" }
mkl-include = { version = "^2023.0", markers = "sys_platform == 'win32'" }

[tool.poetry.group.dev.dependencies]
ipdb = ">=0.13.13,<0.14.0"
pytest = ">=9.0.3,<10.0.0"
pre-commit = ">=4.6.0,<5.0.0"
ipykernel = ">=7.2.0,<8.0.0"
scipy-stubs = ">=1.17.1.5,<2.0.0.0"
pandas-stubs = "=3.0.3.260530,<4.0.0.0"

# Optional dependencies for JAX support
jax = { version = "<0.5.0", optional = true }
jaxlib = { version = "<0.5.0", optional = true }
numpyro = { version = "<0.16.0", optional = true }

[tool.poetry.extras]
jax = ["jax", "jaxlib", "numpyro"]
sed = ["gaiadr3-zeropoint"]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
exozippy = "exozippy.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["exozippy", "src"]
markers = [
    "slow: tests that build a full System + compile PyTensor graphs (~30s+ each); skip with -m 'not slow'",
]