[tool.poetry]
name = "exozippy"
version = "0.1.0"
description = "general modeling fitting code"
authors = ["Jason Eastman <jason.eastman@cfa.harvard.edu>","Phoebe Sandhaus <pjs5535@psu.edu>"]
readme = "README.md"
homepage = "https://github.com/jdeast/EXOZIPPy"
license = "BSD-3-Clause"
keywords = ["exofast", "exofastv2", "exoplanet", "transit", "radial velocity", "sed", "mist", "microlensing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
]
packages = [{include = "exozippy", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pytensor = ">=3.1.2,<3.2.0"
pandas = ">=1.3.6,<3.0.0"
arviz = ">=1.1.0,<2.0.0"
dm-tree = ">=0.1.8"
numpy = ">=2.0"
pymc = ">=6.0.0,<7.0.0"
pyyaml = ">=6.0.3,<7.0.0"
matplotlib = ">=3.10.9,<4.0.0"
astropy = ">=7.2.0,<8.0.0"
celerite = ">=0.4.3,<0.5.0"
corner = ">=2.2.3,<3.0.0"
mulensmodel = ">=3.9.0,<4.0.0"
jplephem = ">=2.24,<3.0"
lightkurve = ">=2.6.0,<3.0.0"
exoplanet-core = { git = "https://github.com/exoplanet-dev/exoplanet-core.git", extras = ["pymc"] }
click = ">=8.3.3,<9.0.0"
h5py = ">=3.16.0,<4.0.0"
numba = ">=0.65.1,<0.66.0"
astroquery = ">=0.4.7"
gaiadr3-zeropoint = ">=0.0.1"

# Optional: microlensing extra (pip install exozippy[microlensing] / poetry install -E microlensing)
mmexofast = { git = "https://github.com/jenniferyee/MMEXOFAST.git", optional = true }
sfit-minimizer = { git = "https://github.com/jenniferyee/sfit_minimizer.git", optional = true }
emcee = { version = "^3.1.6", optional = true }

# jax>=0.5.0 is required by exoplanet-core's JAX-FFI backend (exoplanet-dev/exoplanet-core#143);
# the prior <0.5.0 cap was a workaround for a pytensor 2.35-2.38 Kepler JAX dispatch bug that
# no longer applies now that we're on pytensor 3.x.
jax = ">=0.5.0,<1.0.0"
jaxlib = ">=0.5.0,<1.0.0"
numpyro = ">=0.21.0,<1.0.0"
blackjax = ">=0.8.0,<2.0.0"
nutpie = ">=0.13.0"

# OS specific dependencies
mkl = { version = "^2023.0", markers = "sys_platform == 'win32'" }
mkl-include = { version = "^2023.0", markers = "sys_platform == 'win32'" }
# NetCDF write backend for idata.to_netcdf(); arviz/xarray no longer pull one
# in by default (it's an optional "io" extra), but we need it to save traces.
h5netcdf = "^1.8.1"
lxml = ">=5.0"

[tool.poetry.group.dev.dependencies]
ipdb = ">=0.13.13,<0.14.0"
pytest = ">=9.0.3,<10.0.0"
pre-commit = ">=4.6.0,<5.0.0"
ipykernel = ">=7.2.0,<8.0.0"
scipy-stubs = ">=1.17.1.5,<2.0.0.0"
pandas-stubs = "=3.0.3.260530,<4.0.0.0"
pytest-timeout = "^2.4.0"

[tool.poetry.extras]
microlensing = ["mmexofast", "sfit-minimizer", "emcee"]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
exozippy = "exozippy.cli:main"
exozippy-modes = "exozippy.cli_modes:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["exozippy", "src"]
markers = [
    "slow: tests that build a full System + compile PyTensor graphs (~30s+ each); skip with -m 'not slow'",
]
timeout = 300
timeout_method = "thread"