[tool.poetry]
name = "exozippy"
version = "0.1.0"
description = "general modeling fitting code"
authors = ["Jason Eastman <jason.eastman@cfa.harvard.edu>","Phoebe Sandhaus <pjs5535@psu.edu>"]
readme = "README.md"
homepage = "https://github.com/jdeast/EXOZIPPy"
license = "BSD-3-Clause"
keywords = ["exofast", "exofastv2", "exoplanet", "transit", "radial velocity", "sed", "mist", "microlensing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
]
packages = [{include = "exozippy", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pytensor = ">=3.1.2,<3.2.0"
pandas = ">=1.3.6,<3.0.0"
arviz = ">=1.1.0,<2.0.0"
dm-tree = ">=0.1.8"
numpy = ">=2.0"
pymc = ">=6.0.0,<7.0.0"
pyyaml = ">=6.0.3,<7.0.0"
matplotlib = ">=3.10.9,<4.0.0"
astropy = ">=7.2.0,<8.0.0"
celerite = ">=0.4.3,<0.5.0"
corner = ">=2.2.3,<3.0.0"
mulensmodel = ">=3.9.0,<4.0.0"
jplephem = ">=2.24,<3.0"
lightkurve = ">=2.6.0,<3.0.0"
# PyPI prerelease: 0.4.0rc1 ships cp312/cp313/cp314 wheels (manylinux_2_28 ->
# glibc 2.28/el8, macos arm64, win_amd64), so no git clone or C++ compiler is
# needed. pip skips prereleases by default, but a specifier that names the rc
# (>=0.4.0rc1) permits it per PEP 440 -- no --pre flag required.
# allow-prereleases is for Poetry's own resolver. Intel macOS has no wheel and
# falls back to an sdist build. Was a git HEAD dep until the rc was published.
exoplanet-core = { version = ">=0.4.0rc1,<0.5.0", extras = ["pymc"], allow-prereleases = true }
click = ">=8.3.3,<9.0.0"
h5py = ">=3.16.0,<4.0.0"
numba = ">=0.65.1,<0.66.0"
astroquery = ">=0.4.7"
gaiadr3-zeropoint = ">=0.0.1"

# Optional: microlensing extra (pip install exozippy[microlensing] / poetry install -E microlensing)
mmexofast = { git = "https://github.com/jenniferyee/MMEXOFAST.git", optional = true }
sfit-minimizer = { git = "https://github.com/jenniferyee/sfit_minimizer.git", optional = true }
emcee = { version = "^3.1.6", optional = true }

# Optional: GUI extra (pip install exozippy[gui] / poetry install -E gui). Declared
# as optional main dependencies (NOT a dev group) so `pip install exozippy[gui]`
# pulls them in for end users. The plain CLI and `import exozippy` must keep
# working without these installed -- every GUI import is guarded.
fastapi = { version = ">=0.115.0,<1.0.0", optional = true }
uvicorn = { version = ">=0.30.0,<1.0.0", extras = ["standard"], optional = true }
websockets = { version = ">=13.0,<16.0", optional = true }
pywebview = { version = ">=5.0,<6.0", optional = true }
ruamel-yaml = { version = ">=0.18.0,<1.0.0", optional = true }

# pywebview ships NO GUI backend on Linux -- it only declares one behind its own
# extras (pywebview[qt] / [gtk]), so `exozippy-gui` without --browser died with
# "No module named 'qtpy'". pywebview probes GTK first, then Qt; GTK needs
# PyGObject built against the system gobject-introspection, which is not
# pip-installable in a venv on older distros, so we supply the Qt backend.
# Windows (EdgeChromium/pythonnet) and macOS (Cocoa/pyobjc) get their backends
# from pywebview itself -- hence the linux-only marker.
#
# The <6.10 cap is a glibc floor, NOT a bug workaround: PyQt6 6.10+ publishes
# only manylinux_2_34 wheels, and RHEL/Rocky/Alma 8 ship glibc 2.28. Without the
# cap pip falls back to a source build and fails for want of qmake. 6.9.x is the
# last series with manylinux_2_28 wheels. Raise it only once el8 is unsupported.
qtpy = { version = ">=2.4,<3.0", optional = true, markers = "sys_platform == 'linux'" }
pyqt6 = { version = ">=6.7,<6.10", optional = true, markers = "sys_platform == 'linux'" }
pyqt6-webengine = { version = ">=6.7,<6.10", optional = true, markers = "sys_platform == 'linux'" }

# jax>=0.5.0 is required by exoplanet-core's JAX-FFI backend (exoplanet-dev/exoplanet-core#143);
# the prior <0.5.0 cap was a workaround for a pytensor 2.35-2.38 Kepler JAX dispatch bug that
# no longer applies now that we're on pytensor 3.x.
jax = ">=0.5.0,<1.0.0"
jaxlib = ">=0.5.0,<1.0.0"
numpyro = ">=0.21.0,<1.0.0"
blackjax = ">=0.8.0,<2.0.0"
nutpie = ">=0.13.0"

# OS specific dependencies
mkl = { version = "^2023.0", markers = "sys_platform == 'win32'" }
mkl-include = { version = "^2023.0", markers = "sys_platform == 'win32'" }
# NetCDF write backend for idata.to_netcdf(); arviz/xarray no longer pull one
# in by default (it's an optional "io" extra), but we need it to save traces.
h5netcdf = "^1.8.1"
lxml = ">=5.0"

[tool.poetry.group.dev.dependencies]
ipdb = ">=0.13.13,<0.14.0"
pytest = ">=9.0.3,<10.0.0"
pre-commit = ">=4.6.0,<5.0.0"
ipykernel = ">=7.2.0,<8.0.0"
scipy-stubs = ">=1.17.1.5,<2.0.0.0"
pandas-stubs = "=3.0.3.260530,<4.0.0.0"
pytest-timeout = "^2.4.0"
pytest-xdist = ">=3.0"

[tool.poetry.extras]
microlensing = ["mmexofast", "sfit-minimizer", "emcee"]
gui = ["fastapi", "uvicorn", "websockets", "pywebview", "ruamel-yaml", "qtpy", "pyqt6", "pyqt6-webengine"]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
exozippy = "exozippy.cli:main"
exozippy-modes = "exozippy.cli_modes:main"
exozippy-gui = "exozippy.gui.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["exozippy", "src"]
# Run in parallel by default. --dist loadfile keeps every test in a file on the
# same worker so module/session-scoped fixtures (many System builds) are shared,
# not rebuilt per worker. -n is capped at 6 (not "auto") because each worker
# peaks ~1-2 GB building a System and compiling graphs; 36 workers would OOM.
# Override for single-test debugging with `-n0`, e.g.
#   poetry run pytest tests/test_foo.py::test_bar -n0 -x
addopts = "-n 6 --dist loadfile"
markers = [
    "slow: tests that build a full System + compile PyTensor graphs (~30s+ each); skip with -m 'not slow'",
]
timeout = 300
timeout_method = "thread"